force-app/main/default/objects/AccountechAPI__mdt/AccountechAPI__mdt.object-meta.xml
<CustomObject>
    <label>AccountechAPI</label>
    <pluralLabel>AccountechAPI</pluralLabel>
</CustomObject>