force-app/main/default/objects/AccountechAPI__mdt/fields/AcessToken__c.field-meta.xml
<CustomField>
    <fullName>AcessToken__c</fullName>
    <label>AcessToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>