force-app/main/default/objects/AccountechAPI__mdt/fields/BaseURL__c.field-meta.xml
<CustomField>
    <fullName>BaseURL__c</fullName>
    <label>BaseURL</label>
    <type>Url</type>
</CustomField>