force-app/main/default/objects/AccountechAPI__mdt/fields/Valid_Untill__c.field-meta.xml
<CustomField>
    <fullName>Valid_Untill__c</fullName>
    <label>Valid Untill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>